// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export or assignment:  export const MyComponent = ... 1`] = `
"export const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Export or assignment:  export default ... 1`] = `
"export default {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Export or assignment:  exports.MyCompoent = ... 1`] = `
"exports.MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Export or assignment:  let MyCompoent; MyComponent = ... 1`] = `
"let MyComponent;
MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of marker function:  Changing marker name 1`] = `
"const MyComponent1 = {
  functional: true,

  render(h) {
    return <div />;
  }

};
const MyComponent2 = {
  functional: true,

  render(h) {
    return <div />;
  }

};

const MyComponent3 = __VueFC__(() => <div />);"
`;

exports[`Forms of marker function:  xxx.__VueFC__(...) 1`] = `
"const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of marker function:  xxx.yyy.__VueFC__(...) 1`] = `
"const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of marker function:  xxx['__VueFC__'](...) 1`] = `
"const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of render functions:  () => <div /> 1`] = `
"const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of render functions:  () => { return <div /> } 1`] = `
"const MyComponent = {
  functional: true,

  render(h) {
    return <div class='test' />;
  }

};"
`;

exports[`Forms of render functions:  ({ ...complex... }) => <div>...</div> 1`] = `
"const MyComponent = {
  functional: true,

  render(h, {
    props: {
      foo
    },
    data
  }) {
    return <div class='test'>{foo}</div>;
  }

};"
`;

exports[`Forms of render functions:  ctx => <div>...</div> 1`] = `
"const MyComponent = {
  functional: true,

  render(h, ctx) {
    return <div class='test'>{ctx.props.foo}</div>;
  }

};"
`;
